@@ -187,6 +187,18 @@ operator / (FLOATTYPE scalar) const {
 
 #ifndef FLOATTYPE_IS_INT
 ////////////////////////////////////////////////////////////////////
+//     Function: LPoint2::normalized
+//       Access: Published
+//  Description: Normalizes the vector and returns the normalized
+//               vector as a copy. If the vector was a zero-length
+//               vector, a zero length vector will be returned.
+////////////////////////////////////////////////////////////////////
+INLINE_LINMATH FLOATNAME(LPoint2) FLOATNAME(LPoint2)::
+normalized() const {
+  return FLOATNAME(LVecBase2)::normalized();
+}
+
+////////////////////////////////////////////////////////////////////
 //     Function: LPoint2::project
 //       Access: Published
 //  Description: Returns a new vector representing the projection of
